# DataBackup

./: .gitignore  CMakeLists.txt  Cmakelists.txt  README.md  audit_findings.json
docs/: architecture.md  backend-algorithms.md  code-walkthrough.md  core-engine.md  demo.md  encrypt.md  monitor.md  pipeline-module.md  pipeline.md  testing.md  系统设计文档.docx  软件测试报告.docx  需求分析说明书.docx
include/common/: PlatformCompat.h  Types.h
include/core/: BackupEngine.h  DirectoryTraverser.h  FileFilter.h  FileSystemReader.h  FileSystemWriter.h  IFileReader.h  IFileWriter.h
include/monitor/: FileEvent.h  IFileEventListener.h  IMonitor.h  Monitor.h
include/pipeline/: ArchiveFormat.h  ArchiveReaderImpl.h  ArchiveWriterImpl.h  IArchiveReader.h  IArchiveWriter.h  KeyDerivation.h  StreamCompressor.h  StreamEncryptor.h  StreamPacker.h
src/: main.cpp
src/core/: BackupEngine.cpp  DirectoryTraverser.cpp  FileFilter.cpp  FileSystemReader.cpp  FileSystemWriter.cpp
src/monitor/: Monitor.cpp
src/pipeline/: ArchiveReaderImpl.cpp  ArchiveWriterImpl.cpp  KeyDerivation.cpp  StreamCompressor.cpp  StreamEncryptor.cpp  StreamPacker.cpp
tests/: CMakeLists.txt  MonitorTests.cpp  TestHarness.h  test_archive_format.cpp  test_archive_impl.cpp  test_backup_engine.cpp  test_core_filesystem.cpp  test_file_filter.cpp  test_key_derivation.cpp  test_stream_compressor.cpp  test_stream_encryptor.cpp  test_stream_packer.cpp
